# skills-manager

./: .gitignore  AGENTS.md  CHANGELOG-zh.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: prepare-release.yml  release.yml
crates/skills-manager-cli/: Cargo.toml
crates/skills-manager-cli/src/: commands.rs  main.rs
crates/sm-tui/: Cargo.toml
crates/sm-tui/src/: app.rs  db.rs  main.rs  ui.rs
docs/: skill-format-detection-spec.md
scripts/: ai-agent.mjs  build_macos_icon.py  build_tray_icons.py  codebuddy-agent.mjs  prepare-release.mjs
src/: App.tsx  index.css  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  ai.rs  browse.rs  git_backup.rs  mod.rs  packs.rs  plugins.rs  projects.rs  recipes.rs  router_gen.rs  scan.rs  scenarios.rs  skills.rs  sync.rs  tools.rs
src-tauri/src/core/: content_hash.rs  error.rs  file_watcher.rs  git_backup.rs  git_fetcher.rs  install_cancel.rs  installer.rs  migrations.rs  mod.rs  project_scanner.rs  repo_lock.rs  scanner.rs  skill_metadata.rs  skill_store.rs  skillsmp_api.rs  sync_engine.rs  sync_metadata.rs  tool_adapters.rs
src/components/: AddProjectDialog.tsx  AgentToggleSection.tsx  BatchOnlineMatchDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DeleteSkillButton.tsx  DisclosureModeSelect.tsx  GlobalSearchDialog.tsx  HelpDialog.tsx  Layout.tsx  MultiSelectToolbar.tsx  OnlineMatchDialog.tsx  RouterEditor.tsx  ScenarioPromptEditor.tsx  Sidebar.tsx  SkillDetailPanel.tsx  SkillMarkdown.tsx  SyncDots.tsx  TokenEstimateBadge.tsx  TokensSavedWidget.tsx  Topbar.tsx
src/context/: AppContext.tsx
src/i18n/: en.json  index.ts  zh-TW.json  zh.json
src/lib/: packIcons.tsx  tauri.ts  textScale.ts
src/views/: AgentDetail.tsx  Dashboard.tsx  (+8 more)
(+26 files in other folders)
