[package]
name = "skills-manager"
version = "1.0.0"
description = "Skills Manager - AI Agent Skills Central Manager"
authors = ["tianliang"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
semver = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"
skills-manager-core = { path = "../crates/skills-manager-core", features = ["tauri-compat", "tokio-compat"] }

[dev-dependencies]
tempfile = "3.26.0"
